--- a/FreeIOT/View/Main.storyboard
+++ b/FreeIOT/View/Main.storyboard
@@ -94,9 +94,8 @@
                                                 <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RJj-PE-AsW">
                                                     <rect key="frame" x="8" y="10" width="250" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="O8T-v9-yYh"/>
+                                                        <constraint firstAttribute="height" constant="30" id="MaD-Vt-mCu"/>
                                                         <constraint firstAttribute="height" constant="30" id="SoM-Ed-n6F"/>
-                                                        <constraint firstAttribute="width" constant="250" id="dl6-o1-Nz0"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -163,13 +162,14 @@
                                         <constraints>
                                             <constraint firstItem="QYt-Eq-yNq" firstAttribute="leading" secondItem="GXW-UX-jsb" secondAttribute="leadingMargin" id="2el-Hw-p2U"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="QYt-Eq-yNq" secondAttribute="bottom" constant="12" id="82W-8r-iM1"/>
+                                            <constraint firstItem="RJj-PE-AsW" firstAttribute="trailing" secondItem="QYt-Eq-yNq" secondAttribute="trailing" id="9IS-nP-kbQ"/>
                                             <constraint firstItem="1WI-50-fUz" firstAttribute="leading" secondItem="QYt-Eq-yNq" secondAttribute="trailing" constant="17" id="DL6-EX-22a"/>
+                                            <constraint firstItem="RJj-PE-AsW" firstAttribute="leading" secondItem="QYt-Eq-yNq" secondAttribute="leading" id="DQA-yU-H9J"/>
+                                            <constraint firstItem="QYt-Eq-yNq" firstAttribute="top" secondItem="RJj-PE-AsW" secondAttribute="bottom" constant="2" id="GT0-ag-V03"/>
                                             <constraint firstAttribute="trailing" secondItem="1WI-50-fUz" secondAttribute="trailing" id="SoP-OA-Tyr"/>
-                                            <constraint firstItem="QYt-Eq-yNq" firstAttribute="leading" secondItem="RJj-PE-AsW" secondAttribute="leading" id="kkh-GU-sM7"/>
                                             <constraint firstItem="1WI-50-fUz" firstAttribute="centerY" secondItem="GXW-UX-jsb" secondAttribute="centerY" id="s8L-0U-YAc"/>
                                             <constraint firstItem="1WI-50-fUz" firstAttribute="leading" secondItem="QYt-Eq-yNq" secondAttribute="trailing" constant="17" id="vF0-Mu-sgZ"/>
                                             <constraint firstItem="1WI-50-fUz" firstAttribute="top" secondItem="GXW-UX-jsb" secondAttribute="topMargin" constant="-10" id="w1i-x0-z0x"/>
-                                            <constraint firstItem="QYt-Eq-yNq" firstAttribute="top" secondItem="RJj-PE-AsW" secondAttribute="bottom" constant="2" id="w4K-8f-dHv"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -183,11 +183,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="KbP-99-YGX" firstAttribute="top" secondItem="7iJ-9F-jU9" secondAttribute="bottom" constant="30" id="5dC-y5-K9c"/>
-                            <constraint firstItem="7iJ-9F-jU9" firstAttribute="top" secondItem="0Kt-aj-x4d" secondAttribute="bottom" constant="-44" id="J34-GG-2Rz"/>
+                            <constraint firstItem="7iJ-9F-jU9" firstAttribute="leading" secondItem="9ww-zd-VcH" secondAttribute="leading" id="2Ef-A5-tqF"/>
+                            <constraint firstAttribute="trailing" secondItem="7iJ-9F-jU9" secondAttribute="trailing" id="Bss-hU-thX"/>
+                            <constraint firstItem="KbP-99-YGX" firstAttribute="top" secondItem="7iJ-9F-jU9" secondAttribute="bottom" constant="30" id="HCF-Um-mcW"/>
                             <constraint firstItem="7iJ-9F-jU9" firstAttribute="centerY" secondItem="9ww-zd-VcH" secondAttribute="centerY" id="Nsr-5e-wlc"/>
-                            <constraint firstAttribute="trailing" secondItem="7iJ-9F-jU9" secondAttribute="trailing" id="a1N-j2-Hhz"/>
-                            <constraint firstItem="7iJ-9F-jU9" firstAttribute="leading" secondItem="9ww-zd-VcH" secondAttribute="leading" id="eLN-wU-lZk"/>
+                            <constraint firstItem="7iJ-9F-jU9" firstAttribute="top" secondItem="9ww-zd-VcH" secondAttribute="top" constant="20" symbolic="YES" id="SGH-pC-7n6"/>
                             <constraint firstItem="KbP-99-YGX" firstAttribute="top" secondItem="7iJ-9F-jU9" secondAttribute="bottom" constant="10" id="lU0-52-eeL"/>
                         </constraints>
                         <variation key="default">
@@ -908,6 +908,9 @@
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0ty-7Y-k0g">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Tay-is-yBL"/>
+                                </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="barTintColor" red="0.8913746843" green="0.0" blue="0.12584939789999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <items>
@@ -927,14 +930,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="0ty-7Y-k0g" firstAttribute="top" secondItem="g8A-iV-YZW" secondAttribute="top" id="32W-Gy-LrH"/>
-                            <constraint firstItem="jmT-OK-guw" firstAttribute="top" secondItem="0ty-7Y-k0g" secondAttribute="bottom" id="559-g5-v4f"/>
-                            <constraint firstItem="jmT-OK-guw" firstAttribute="bottom" secondItem="lxr-Pb-0hn" secondAttribute="top" id="APK-z0-QmX"/>
-                            <constraint firstItem="lxr-Pb-0hn" firstAttribute="top" secondItem="0ty-7Y-k0g" secondAttribute="bottom" constant="508" id="Ec0-FV-tuS"/>
-                            <constraint firstItem="jmT-OK-guw" firstAttribute="leading" secondItem="0ty-7Y-k0g" secondAttribute="leading" id="RT6-Rh-uPo"/>
-                            <constraint firstItem="jmT-OK-guw" firstAttribute="trailing" secondItem="0ty-7Y-k0g" secondAttribute="trailing" id="SV9-NP-Dg8"/>
-                            <constraint firstAttribute="trailing" secondItem="0ty-7Y-k0g" secondAttribute="trailing" id="sXI-Yp-s2k"/>
-                            <constraint firstItem="0ty-7Y-k0g" firstAttribute="leading" secondItem="g8A-iV-YZW" secondAttribute="leading" id="xZi-Cg-YJX"/>
+                            <constraint firstItem="0ty-7Y-k0g" firstAttribute="top" secondItem="g8A-iV-YZW" secondAttribute="top" id="782-y4-Tdy"/>
+                            <constraint firstItem="jmT-OK-guw" firstAttribute="trailing" secondItem="0ty-7Y-k0g" secondAttribute="trailing" id="BAx-AA-7Rc"/>
+                            <constraint firstItem="jmT-OK-guw" firstAttribute="leading" secondItem="0ty-7Y-k0g" secondAttribute="leading" id="PYO-wK-4bd"/>
+                            <constraint firstItem="0ty-7Y-k0g" firstAttribute="leading" secondItem="g8A-iV-YZW" secondAttribute="leading" id="QBl-3k-EaX"/>
+                            <constraint firstItem="jmT-OK-guw" firstAttribute="top" secondItem="0ty-7Y-k0g" secondAttribute="bottom" id="Sfm-rG-cH9"/>
+                            <constraint firstAttribute="trailing" secondItem="0ty-7Y-k0g" secondAttribute="trailing" id="Vcr-jy-vx7"/>
+                            <constraint firstItem="jmT-OK-guw" firstAttribute="bottom" secondItem="lxr-Pb-0hn" secondAttribute="top" id="lAj-LM-rap"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
